[package]
name = "bcrypt-pbkdf"
version = "0.0.2"
authors = ["brycx <brycx@protonmail.com>"]
description = "bcrypt_pbkdf implementation in pure Rust."
keywords = [ "cryptography", "bcrypt", "pbkdf", "bcrypt-pbkdf" ]
categories = [ "cryptography", "no-std" ]
readme = "README.md"
repository = "https://github.com/brycx/bcrypt-pbkdf"
documentation = "https://docs.rs/bcrypt-pbkdf"
license = "MIT"
exclude = [
    ".gitignore",
    ".travis.yml",
    "fuzz/*"
]

[dependencies]
blowfish = { version = "0.3.0", features = ["bcrypt"] }
byteorder = { version = "1.2.6", default-features = false }
seckey = { version = "0.9.1", default-features = false }
sha2 = "0.7.1"

[badges]
travis-ci = { repository = "brycx/bcrypt-pbkdf" }

[profile.release]
opt-level = 3
