[package]
name = "bcrypt-pbkdf"
version = "0.0.4"
authors = ["brycx <brycx@protonmail.com>"]
description = "bcrypt_pbkdf implementation in pure Rust."
keywords = [ "cryptography", "bcrypt", "pbkdf", "bcrypt-pbkdf" ]
categories = [ "cryptography", "no-std" ]
readme = "README.md"
repository = "https://github.com/brycx/bcrypt-pbkdf"
documentation = "https://docs.rs/bcrypt-pbkdf"
license = "MIT"
exclude = [
    ".gitignore",
    ".travis.yml",
    "fuzz/*"
]

[dependencies]
blowfish = { version = "0.3.0", features = ["bcrypt"] }
byteorder = { version = "1.2.7", default-features = false }
sha2 = { version = "0.8.0", default-features = false }

[dependencies.clear_on_drop]
version = "0.2.3"
features = ["nightly"]

[badges]
travis-ci = { repository = "brycx/bcrypt-pbkdf" }

[profile.release]
opt-level = 3
